# LangBench

./: .gitignore  README.md
C++/file-server/: Makefile  file_server.cpp
C++/graph/: Makefile  make.sh
C++/key-value/: Makefile  key_value.cpp
C++/log-parser/: log_parser.cpp
C++/sort/: Makefile
C++/sudoku/: Makefile
Go/file-server/: Makefile
Go/file-server/default/: file_server.go
Go/graph/: Makefile
Go/key-value/: Makefile  key_value.go
Go/sort/: Makefile
Go/sudoku/: Makefile
Java/file-server/: FileServer.java  Makefile
Java/graph/: Makefile
Java/key-value/: KeyValue.java  Makefile
Java/sort/: Makefile
Java/sudoku/: Makefile  Sudoku.java
JavaScript/file-server/: Makefile  file_server.js
JavaScript/graph/: Makefile  package-lock.json
JavaScript/key-value/: Makefile  key_value.js
JavaScript/sort/: Makefile
JavaScript/sudoku/: Makefile  sudoku.js
Python/file-server/: Makefile  file_server.py
Python/graph/: Makefile
Python/key-value/: Makefile  key_value.py  key_value_concurrent.py
Python/sort/: Makefile
Python/sudoku/: Makefile  sudoku.py
benchmark-data/file-server/: .gitignore
benchmark-data/file-server/client/: Makefile
data/: run-server-client.py
data/file-server/: generate.py
data/file-server/client/: Makefile
data/obelix96/docker-default/C++/: file-server.json  graph.json  key-value.json  sort.json  sudoku.json
data/obelix96/docker-default/Go/: file-server.json  graph.json  key-value.json  sort.json  sudoku.json
data/obelix96/docker-default/Java/: file-server.json  graph.json  key-value.json  sort.json  sudoku.json
data/obelix96/docker-default/JavaScript/: file-server.json  graph.json  key-value.json  sort.json  sudoku.json
data/obelix96/docker-default/Python/: file-server.json  graph.json  key-value.json  sort.json  sudoku.json
data/sudoku/: verify.py
file-server/client/: Makefile
file-server/cpp/: Makefile
graph/cpp/: CMakeLists.txt  Makefile  graph.cpp
graph/go/: Makefile
graph/java/: Makefile
graph/js/: Makefile
graph/python/: Makefile
key-value/cpp/: Makefile
key-value/go/: Makefile
key-value/java/: Makefile
key-value/js/: Makefile  key_value.js
key-value/python/: Makefile
log-parser/cpp/: CMakeLists.txt  log_parser_hs.cpp
scripts/: measure.py  table.py  time_v_energy.py
sort/cpp/: Makefile
sort/go/: Makefile
sort/java/: Makefile
sort/js/: Makefile
sort/python/: Makefile
sudoku/: scraper.py
sudoku/cpp/: Makefile  sudoku.cpp
sudoku/go/: Makefile  sudoku.go
sudoku/java/: Makefile
sudoku/js/: Makefile
sudoku/python/: Makefile
